fix: mobile nav z-index issue

--- a/src/component-library/styles/component-library.pcss
+++ b/src/component-library/styles/component-library.pcss
@@ -49,7 +49,7 @@
     padding: var(--spacing-md);
     position: sticky;
     top: 0;
-    z-index: var(--layer-6);
+    z-index: var(--layer-2);
 
     > .sidebar-logo {
       height: 37px;
