--- a/src/styles/components/navigation/mobile.pcss
+++ b/src/styles/components/navigation/mobile.pcss
@@ -158,7 +158,7 @@
   position: fixed;
   transform: translateX(-100%);
   transition: transform var(--animation-normal) ease-in-out;
-  z-index: var(--layer-5);
+  z-index: var(--layer-6);
 
   &.open {
     transform: translateX(0);
